--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
